Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-19404

Assertion failure on !is_thread_specific || (mysqld_server_initialized && thd)

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Blocker
    • Resolution: Fixed
    • 10.3(EOL), 10.4(EOL)
    • 10.3.15, 10.4.5
    • Galera
    • None

    Description

      #7  0x00007fd5135d6c82 in __GI___assert_fail (assertion=0x565357272f38 "!is_thread_specific || (mysqld_server_initialized && thd)", file=0x565357271b88 "/home/teemu/work/git/mariadb-server/sql/mysqld.cc", line=4088, function=0x56535727a440 <my_malloc_size_cb_func::__PRETTY_FUNCTION__> "void my_malloc_size_cb_func(long long int, my_bool)") at assert.c:101
      #8  0x00005653566e56ad in my_malloc_size_cb_func (size=-96, is_thread_specific=1 '\001') at /home/teemu/work/git/mariadb-server/sql/mysqld.cc:4088
      #9  0x00005653571d47c3 in my_free (ptr=0x7fd4f0008300) at /home/teemu/work/git/mariadb-server/mysys/my_malloc.c:215
      #10 0x00005653567089c1 in Session_sysvars_tracker::deinit (this=0x7fd4f0006410, thd=0x7fd4f0000b00) at /home/teemu/work/git/mariadb-server/sql/session_tracker.cc:337
      #11 0x00005653568266b3 in plugin_thdvar_init (thd=0x7fd4f0000b00) at /home/teemu/work/git/mariadb-server/sql/sql_plugin.cc:3137
      #12 0x0000565356829ff5 in wsrep_plugins_post_init () at /home/teemu/work/git/mariadb-server/sql/sql_plugin.cc:4352
      #13 0x00005653566e8e65 in init_server_components () at /home/teemu/work/git/mariadb-server/sql/mysqld.cc:5550
      #14 0x00005653566e9abd in mysqld_main (argc=157, argv=0x565358886fa0) at /home/teemu/work/git/mariadb-server/sql/mysqld.cc:6009
      #15 0x00005653566de0f0 in main (argc=26, argv=0x7fffcfe9c328) at /home/teemu/work/git/mariadb-server/sql/main.cc:25
      

      Attachments

        Activity

          People

            jplindst Jan Lindström (Inactive)
            jplindst Jan Lindström (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: