MDEV-19404: Assertion failure on !is_thread_specific || (mysqld_server_initialized && thd)

In wsrep_plugins_post_init we iterate all theads and if they are
galera appliers (wsrep_applier) we init session variables. However,
current_thd was not set and recent changes on session variables
require holding LOCK_gloal_system_variables mutex.